# Webley

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  documentation.yml
api-reference/: index.html
api-reference/auth/types/user/: index.html
api-reference/general/exceptions/: index.html
api-reference/general/types/webley/: index.html
api-reference/network/types/httprequest/: index.html
api-reference/network/types/httpresponse/: index.html
api-reference/network/types/router/: index.html
api/exceptions/: index.html
api/methods/: index.html
api/types/: index.html
assets/scripts/: scroll.js
assets/theme/: reference.css
docs/: api-reference.md  index.md  installation.md  usage.md
docs/api/: exceptions.md  methods.md  packages.md  types.md
docs/api-reference/: index.md
docs/api-reference/general/: exceptions.md
docs/api-reference/general/types/: webley.md
docs/api-reference/network/types/: httprequest.md  httpresponse.md  router.md
docs/assets/overrides/: home.html
docs/assets/theme/: code.css  home.css  reference.css
examples/: sandbox.py  website.py
examples/blog/: main.py
getting-started/installation/: index.html
installation/: index.html
search/: search_index.json
tests/: website.py
usage/: index.html
webley/: __init__.py  __init__.pyi  router.py  version.pyi
webley/core/: __init__.py  app.py  router.py  server.py
webley/http/: __init__.py  request.py  response.py
webley/utils/: fetch_version.py
