[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webley"
description = ""
dynamic = ["version"]
license = {text = "MPL-2.0"}
authors = []
requires-python = ">=3.11"
dependencies = []
readme = "README.md"
classifiers = []

[tool.setuptools.dynamic]
version = {attr = "webley.__version__"}

[project.urls]
Source = "https://github.com/DevByEagle/Webley"
Documentation = "https://devbyeagle.github.io/Webley/"
Tracker = "https://github.com/DevByEagle/Webley/issues"

[project.optional-dependencies]

[tool.black]
target-version = ["py312"]

[tool.isort]
profile = "black"