[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "webley"
dynamic = ["version"]
description = ""
requires-python = ">=3.12"
readme = "README.md"
classifiers = []
license = 'MPL-2.0'

[project.urls]
Source = "https://github.com/DevByEagle/Webley"
Tracker = "https://github.com/DevByEagle/Webley/issues"

[tool.setuptools.dynamic]
version = {attr = "webley.__version__"}

[tool.mypy]
exclude = "build"